See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

Not yet  BJH  Release 10.53.00

              pamstereogram: Add mapped texture stereogram option.
              Thanks Scott Pakin.

              pamstereogram: slight change to dpi and eye separation defaults.
              invert near/far dark/light association.  Thanks Scott Pakin.

              sgitopnm: Fix arithmetic overflow on -channel option.

              sgitopnm: Fix crash with -channel on verbatim SGI image.

              fitstopnm: Deal properly with NaN in input image.

              pm_floatFromBigendFloat, pm_doubleFromBigendFloat, fitstopnm:
              fix corrupted output.  Broken in 10.46.

              pamtopdbimg: fix corrupted output image.  Thanks Scott Pakin.

              pdbimgtopam: fix corrupted output image.  Thanks Scott Pakin.

              Rename all external symbols that don't have a Netpbm prefix
              to start with "pm_": shhopt, nstring, nsleep.  Eliminate
              createBlackTuple -- pnmCreateBlackTuple already existed.

              configure: Make warnings stand out more.

              configure: Fix crash when libpng test compile fails.

10.09.26 BJH  Release 10.52.00

              Add pamtopdbimg, pdbimgtopam.

              Add pamrecolor.  Thanks Scott Pakin.

              anytopnm: Use 'pngtopam' shell command instead of 'pngtopnm'.

              pnmtopng:  -libversion doesn't report level of linked libz.
              It was a modularity violation and caused build failures on
              Mac OS X, because pnmtopng per se doesn't know about libz --
              it's used by libpng.

              libnetpbm: add pm_readbiglong2, pm_readbiglong2u,
              pm_readlittlelong2, pm_readlittlelong2u: These use the proper
              32 bit integer types instead of "long".  (But the old ones
              still work in legacy code because long is always at least 32